src/syntatic/Javamm.java
/* Javamm.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Javamm.java */
import java.io.FileInputStream;
import java.io.FileNotFoundException;

public class Javamm/*@bgen(jjtree)*/implements JavammTreeConstants, JavammConstants {/*@bgen(jjtree)*/
  protected static JJTJavammState jjtree = new JJTJavammState();public static void main(String args[]) throws ParseException, FileNotFoundException {
        try
        {
            Javamm javamm = new Javamm(new FileInputStream(args[0]));
            SimpleNode root = javamm.Module();
            root.dump("");
        }

        catch (FileNotFoundException ex)
        {
            // insert code to run when exception occurs
        }
    }

  static final public SimpleNode Module() throws ParseException {/*@bgen(jjtree) Module */
  ASTModule jjtn000 = new ASTModule(JJTMODULE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ClassDeclaration();
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
                               jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public void ClassDeclaration() throws ParseException {/*@bgen(jjtree) ClassDeclaration */
                           ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      jj_consume_token(CLASS);
      t1 = jj_consume_token(IDENTIFIER);
jjtn000.className = t1.image;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EXTENDS:{
        jj_consume_token(EXTENDS);
        t2 = jj_consume_token(IDENTIFIER);
jjtn000.extension = t2.image;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(LBRACE);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case BOOLEAN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        VarDeclaration();
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(PUBLIC);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case STATIC:{
          MainDeclaration();
          break;
          }
        case INT:
        case BOOLEAN:
        case IDENTIFIER:{
          MethodDeclaration();
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void VarDeclaration() throws ParseException {/*@bgen(jjtree) VarDeclaration */
                         ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
                         boolean jjtc000 = true;
                         jjtree.openNodeScope(jjtn000);Token t1;
    try {
      Type();
      t1 = jj_consume_token(IDENTIFIER);
jjtn000.varName = t1.image;
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
}

  static final public void MainDeclaration() throws ParseException {/*@bgen(jjtree) MainDeclaration */
                          ASTMainDeclaration jjtn000 = new ASTMainDeclaration(JJTMAINDECLARATION);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token t1;
    try {
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(LPAR);
      jj_consume_token(STRINGLIT);
      jj_consume_token(RECTBRACEL);
      jj_consume_token(RECTBRACER);
      t1 = jj_consume_token(IDENTIFIER);
jjtn000.args = t1.image;
      jj_consume_token(RPAR);
      jj_consume_token(LBRACE);
      label_3:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_3;
        }
        VarDeclaration();
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NEW:
        case WHILE:
        case IF:
        case THIS:
        case TRUE:
        case FALSE:
        case LPAR:
        case LBRACE:
        case MINUS:
        case IDENTIFIER:
        case INTEGERLITERAL:
        case 47:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        Statement();
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
}

  static final public void MethodDeclaration() throws ParseException {/*@bgen(jjtree) MethodDeclaration */
                            ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Token t1;
    try {
      Type();
      t1 = jj_consume_token(IDENTIFIER);
jjtn000.methodName = t1.image;
      jj_consume_token(LPAR);
      MethodArguments();
      jj_consume_token(RPAR);
      jj_consume_token(LBRACE);
      label_5:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_5;
        }
        VarDeclaration();
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NEW:
        case WHILE:
        case IF:
        case THIS:
        case TRUE:
        case FALSE:
        case LPAR:
        case LBRACE:
        case MINUS:
        case IDENTIFIER:
        case INTEGERLITERAL:
        case 47:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_6;
        }
        Statement();
      }
      Return();
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void MethodArguments() throws ParseException {/*@bgen(jjtree) MethodArguments */
                          ASTMethodArguments jjtn000 = new ASTMethodArguments(JJTMETHODARGUMENTS);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:{
        Type();
        t = jj_consume_token(IDENTIFIER);
jjtn000.identifier = t.image;
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            break label_7;
          }
          jj_consume_token(COMMA);
          MethodArgumentPiece();
        }
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void MethodArgumentPiece() throws ParseException {/*@bgen(jjtree) MethodArgumentPiece */
                              ASTMethodArgumentPiece jjtn000 = new ASTMethodArgumentPiece(JJTMETHODARGUMENTPIECE);
                              boolean jjtc000 = true;
                              jjtree.openNodeScope(jjtn000);Token t1;
    try {
      Type();
      t1 = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.name = t1.image;
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void Return() throws ParseException {/*@bgen(jjtree) Return */
                 ASTReturn jjtn000 = new ASTReturn(JJTRETURN);
                 boolean jjtc000 = true;
                 jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      jj_consume_token(RETURN);
      if (jj_2_3(2)) {
        t1 = jj_consume_token(IDENTIFIER);
jjtn000.identifier = t1.image;
      } else if (jj_2_4(2)) {
        t2 = jj_consume_token(INTEGERLITERAL);
jjtn000.val = Integer.parseInt(t2.image);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NEW:
        case THIS:
        case TRUE:
        case FALSE:
        case LPAR:
        case MINUS:
        case IDENTIFIER:
        case INTEGERLITERAL:
        case 47:{
          Expression();
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void Type() throws ParseException {/*@bgen(jjtree) Type */
               ASTType jjtn000 = new ASTType(JJTTYPE);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        t1 = jj_consume_token(INT);
jjtn000.type = t1.image;
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case RECTBRACEL:{
          t2 = jj_consume_token(RECTBRACEL);
if(t2.image != null){
            jjtn000.isArray = true;
        }
          jj_consume_token(RECTBRACER);
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          ;
        }
        break;
        }
      case BOOLEAN:{
        t1 = jj_consume_token(BOOLEAN);
jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
jjtn000.type = t1.image;
        break;
        }
      case IDENTIFIER:{
        t1 = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
jjtn000.type = t1.image;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
}

  static final public void Statement() throws ParseException {/*@bgen(jjtree) Statement */
                    ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token t1, t2, t3;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACE:{
        StatementBody();
        break;
        }
      case IF:{
        StatementIf();
        break;
        }
      case WHILE:{
ASTWhile jjtn001 = new ASTWhile(JJTWHILE);
     boolean jjtc001 = true;
     jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(WHILE);
        } finally {
if (jjtc001) {
       jjtree.closeNodeScope(jjtn001, true);
     }
        }
        try {
          jj_consume_token(LPAR);
          Expression();
          jj_consume_token(RPAR);
        } catch (ParseException e) {
error_skip_while(RPAR,RBRACE);
        }
        Statement();
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        if (jj_2_5(2)) {
          FunctionCall();
        } else if (jj_2_6(2)) {
          Expression();
          jj_consume_token(SEMICOLON);
        } else if (jj_2_7(2)) {
          AttributionHead();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ASSIGN:{
            jj_consume_token(ASSIGN);
ASTAttribution jjtn002 = new ASTAttribution(JJTATTRIBUTION);
                                              boolean jjtc002 = true;
                                              jjtree.openNodeScope(jjtn002);
            try {
              Expression();
            } catch (Throwable jjte002) {
if (jjtc002) {
                                                jjtree.clearNodeScope(jjtn002);
                                                jjtc002 = false;
                                              } else {
                                                jjtree.popNode();
                                              }
                                              if (jjte002 instanceof RuntimeException) {
                                                {if (true) throw (RuntimeException)jjte002;}
                                              }
                                              if (jjte002 instanceof ParseException) {
                                                {if (true) throw (ParseException)jjte002;}
                                              }
                                              {if (true) throw (Error)jjte002;}
            } finally {
if (jjtc002) {
                                                jjtree.closeNodeScope(jjtn002,  2);
                                              }
            }
            jj_consume_token(SEMICOLON);
            break;
            }
          case RECTBRACEL:{
            jj_consume_token(RECTBRACEL);
            Expression();
            jj_consume_token(RECTBRACER);
            jj_consume_token(ASSIGN);
            Expression();
            jj_consume_token(SEMICOLON);
            break;
            }
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
}

  static final public void FunctionCall() throws ParseException {/*@bgen(jjtree) FunctionCall */
                       ASTFunctionCall jjtn000 = new ASTFunctionCall(JJTFUNCTIONCALL);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      t1 = jj_consume_token(IDENTIFIER);
jjtn000.function = t1.image;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DOT:{
        jj_consume_token(DOT);
        t2 = jj_consume_token(IDENTIFIER);
jjtn000.module = t2.image;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NEW:
      case STRINGLIT:
      case IDENTIFIER:
      case INTEGERLITERAL:{
        ArgumentList();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(RPAR);
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void NewArgumentFunctionCall() throws ParseException {/*@bgen(jjtree) NewArgumentFunctionCall */
                                  ASTNewArgumentFunctionCall jjtn000 = new ASTNewArgumentFunctionCall(JJTNEWARGUMENTFUNCTIONCALL);
                                  boolean jjtc000 = true;
                                  jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      jj_consume_token(NEW);
      t1 = jj_consume_token(IDENTIFIER);
jjtn000.function = t1.image;
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NEW:
      case STRINGLIT:
      case IDENTIFIER:
      case INTEGERLITERAL:{
        ArgumentList();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(RPAR);
      jj_consume_token(DOT);
      t2 = jj_consume_token(IDENTIFIER);
jjtn000.module = t2.image;
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NEW:
      case STRINGLIT:
      case IDENTIFIER:
      case INTEGERLITERAL:{
        ArgumentList();
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(RPAR);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void ArgumentFunctionCall() throws ParseException {/*@bgen(jjtree) ArgumentFunctionCall */
                               ASTArgumentFunctionCall jjtn000 = new ASTArgumentFunctionCall(JJTARGUMENTFUNCTIONCALL);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      t1 = jj_consume_token(IDENTIFIER);
jjtn000.function = t1.image;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DOT:{
        jj_consume_token(DOT);
        t2 = jj_consume_token(IDENTIFIER);
jjtn000.module = t2.image;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NEW:
      case STRINGLIT:
      case IDENTIFIER:
      case INTEGERLITERAL:{
        ArgumentList();
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(RPAR);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void ArgumentList() throws ParseException {/*@bgen(jjtree) ArgumentList */
  ASTArgumentList jjtn000 = new ASTArgumentList(JJTARGUMENTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Argument();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          break label_8;
        }
        jj_consume_token(COMMA);
        Argument();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}
